# i8080-emulator

./: CMakeLists.txt  README.md
src/: Emulator8080.cpp  Emulator8080.h  Main.cpp  Main.h  Utils.h
tests/: TEST.ASM
